--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f5e5e3">  <td>17/12/24 15:53:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_001_SearchListingPageTestCases.searchListingPageTestCases()[pri:0, instance:com.bigbasket.testcases.TC_001_SearchListingPageTestCases@3e6fa38a]">searchListingPageTestCases</td> 
-  <td>main@540585569</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>17/12/27 22:39:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_001_SearchListingPageTestCases.searchListingPageTestCases()[pri:0, instance:com.bigbasket.testcases.TC_001_SearchListingPageTestCases@1bce4f0a]">searchListingPageTestCases</td> 
+  <td>main@555826066</td>   <td></td> </tr>
 </table>
